fix AI book field